fix: PWA safe-area support - viewport-fit=cover, header/nav/search bar padding for iOS standalone mode, black nav background

--- a/caja3/src/pages/index.astro
+++ b/caja3/src/pages/index.astro
@@ -7,7 +7,7 @@ import MenuApp from '../components/MenuApp.jsx';
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/x-icon" href="/icon.ico" />
 		<link rel="icon" type="image/png" href="https://laruta11-images.s3.amazonaws.com/menu/logo-optimized.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover" />
 		<meta name="generator" content={Astro.generator} />
 		<title>La Ruta 11 - Menú Digital</title>
 		
@@ -32,7 +32,7 @@ import MenuApp from '../components/MenuApp.jsx';
 		
 		<!-- iOS PWA Support -->
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="default">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 		<meta name="apple-mobile-web-app-title" content="La Ruta 11">
 		<link rel="apple-touch-icon" href="https://laruta11-images.s3.amazonaws.com/menu/logo-optimized.png">
 		
