--- a/caja3/src/pages/personal.astro
+++ b/caja3/src/pages/personal.astro
@@ -10,6 +10,6 @@ import PersonalApp from '../components/PersonalApp.jsx';
 
 </head>
 <body class="bg-gray-50">
-  <PersonalApp client:load />
+  <PersonalApp client:only="react" />
 </body>
 </html>
