--- a/landing3/src/layouts/Layout.astro
+++ b/landing3/src/layouts/Layout.astro
@@ -14,10 +14,12 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="https://laruta11-images.s3.amazonaws.com/menu/1755571382_test.jpg" />
     <link rel="apple-touch-icon" href="https://laruta11-images.s3.amazonaws.com/menu/1755571382_test.jpg" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800&family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <title>{title}</title>
   </head>
-  <body class="font-poppins bg-ruta-white">
+  <body class="font-montserrat bg-ruta-dark text-ruta-white selection:bg-ruta-yellow selection:text-ruta-black">
     <slot />
   </body>
 </html>
